--- a/the_next_app/package.json
+++ b/the_next_app/package.json
@@ -13,6 +13,8 @@
     "@emotion/styled": "^11.9.3",
     "@mui/material": "^5.8.7",
     "bootstrap": "^5.1.3",
+    "lodash.chunk": "^4.2.0",
+    "lodash.throttle": "^4.1.1",
     "next": "12.2.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
